@@ -10,6 +10,7 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.7'
+    id 'org.beryx.jlink' version '2.21.1'
 }
 
 sourceCompatibility = 11
@@ -38,6 +39,7 @@ javafx {
     modules = [ 'javafx.graphics', 'javafx.fxml', 'javafx.controls']
 }
 
+
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
@@ -52,6 +54,25 @@ repositories {
 }
 
 def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED', '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]
+
+jlink {
+
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'whatwebfx'
+
+        jvmArgs = [
+                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons"
+        ]
+    }
+
+    jpackage {
+        if (org.gradle.internal.os.OperatingSystem.current().windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+        }
+    }
+}
+
 
 run {
     inputs.property('moduleName', moduleName)
